fixing some translation typos

--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -179,7 +179,7 @@
 
     <!-- What's new -->
     <string name="whats_new">Yeni nə var</string>
-    <string name="whats_new_disclaimer">* burada yalnız böyük təzələmələr sıralanıb, həmişə əlavə yeniliklər də olur/string>
+    <string name="whats_new_disclaimer">* burada yalnız böyük təzələmələr sıralanıb, həmişə əlavə yeniliklər də olur</string>
 
     <!-- Actionbar items -->
     <string name="delete">Sil</string>
@@ -363,7 +363,7 @@
     <string name="show_info_bubble">Show an info bubble at scrolling items by scrollbar dragging</string>
     <string name="prevent_phone_from_sleeping">Prevent phone from sleeping while the app is in foreground</string>
     <string name="skip_delete_confirmation">Silmə təsdiq dialoqunu göstərmə</string>
-    <string name="enable_pull_to_refresh">Yuxarıdan çək-təzələ'ni aç</string>
+    <string name="enable_pull_to_refresh">Yuxarıdan çək-təzələ\'ni aç</string>
     <string name="use_24_hour_time_format">24 saat formatından istifadə et</string>
     <string name="sunday_first">Həftəyə Bazar Ertəsindən başla</string>
     <string name="widgets">Widgetlər</string>
