--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -194,7 +194,7 @@
     <string name="temporarily_show_hidden">暫時顯示隱藏的檔案</string>
     <string name="stop_showing_hidden">停止顯示隱藏的檔案</string>
     <string name="maximum_share_reached">你不能一次分享這麼多內容</string>
-    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
+    <string name="empty_and_disable_recycle_bin">清空並停用回收桶</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序</string>
@@ -213,15 +213,15 @@
     <string name="proceed_with_deletion">確定要進行刪除嗎?</string>
     <string name="deletion_confirmation">你確定要刪除%s嗎?</string>    <!-- Are you sure you want to delete 5 items? -->
     <string name="move_to_recycle_bin_confirmation">你確定要把%s移到回收桶嗎?</string>    <!-- Are you sure you want to move 3 items into Recycle Bin? -->
-    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
-    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
+    <string name="are_you_sure_delete">你確定要刪除這個項目嗎?</string>
+    <string name="are_you_sure_recycle_bin">你確定要把這個項目移到回收桶嗎?</string>
     <string name="do_not_ask_again">這情況不再詢問</string>
     <string name="yes">是</string>
     <string name="no">否</string>
 
     <plurals name="delete_warning">
-        <item quantity="one">WARNING: You are deleting a folder</item>
-        <item quantity="other">WARNING: You are deleting %d folders</item>
+        <item quantity="one">注意: 你正在刪除1個資料夾</item>
+        <item quantity="other">注意: 你正在刪除%d個資料夾</item>
     </plurals>
 
     <!-- Password protection -->
@@ -245,8 +245,8 @@
     <string name="fingerprint_setup_successfully">保護設置成功。若再次設置時發生問題，請重新安裝應用程式。</string>
 
     <!-- Times -->
-    <string name="yesterday">Yesterday</string>
-    <string name="today">Today</string>
+    <string name="yesterday">昨天</string>
+    <string name="today">今天</string>
     <string name="tomorrow">明天</string>
     <string name="seconds_raw">秒鐘</string>
     <string name="minutes_raw">分鐘</string>
@@ -371,7 +371,7 @@
     <string name="vibrate_on_button_press">按下按鈕時震動</string>
     <string name="move_items_into_recycle_bin">將項目移入回收桶取代刪除</string>
     <string name="recycle_bin_cleaning_interval">回收桶清理間隔</string>
-    <string name="empty_recycle_bin">空白回收桶</string>
+    <string name="empty_recycle_bin">清空回收桶</string>
     <string name="force_portrait_mode">強制直向模式</string>
 
     <!-- Setting sections -->
@@ -385,13 +385,13 @@
     <string name="text">文字</string>
 
     <!-- Recycle Bin -->
-    <string name="restore_this_file">Restore this file</string>
-    <string name="restore_selected_files">Restore selected files</string>
-    <string name="restore_all_files">Restore all files</string>
-    <string name="recycle_bin_emptied">The Recycle Bin has been emptied successfully</string>
-    <string name="files_restored_successfully">Files have been restored successfully</string>
-    <string name="empty_recycle_bin_confirmation">Are you sure you want to empty the Recycle Bin? The files will be permanently lost.</string>
-    <string name="recycle_bin_empty">The Recycle Bin is empty</string>
+    <string name="restore_this_file">還原這個檔案</string>
+    <string name="restore_selected_files">還原選擇的檔案</string>
+    <string name="restore_all_files">還原全部檔案</string>
+    <string name="recycle_bin_emptied">回收桶已成功清空</string>
+    <string name="files_restored_successfully">檔案已成功還原</string>
+    <string name="empty_recycle_bin_confirmation">你確定要清空回收桶嗎?檔案將會永久消失。</string>
+    <string name="recycle_bin_empty">回收桶是空的</string>
 
     <!-- Import / Export -->
     <string name="importing">正在匯入…</string>
