adding the ExoPlayer license

--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -544,4 +544,5 @@
     <string name="gson_title">Gson (JSON parser)</string>
     <string name="leak_canary_title">Leak Canary (memory leak detector)</string>
     <string name="number_picker_title">Selector de número (selector de número personalizable)</string>
+    <string name="exoplayer_title">ExoPlayer (video player)</string>
 </resources>
