--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -544,4 +544,5 @@
     <string name="gson_title">Gson (analisador JSON)</string>
     <string name="leak_canary_title">Leak Canary (detector de vazamento de memória)</string>
     <string name="number_picker_title">Number Picker (selecionador personalizável de número)</string>
+    <string name="exoplayer_title">ExoPlayer (video player)</string>
 </resources>
