--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -544,4 +544,5 @@
     <string name="gson_title">Gson (JSON ayrıştırıcısı)</string>
     <string name="leak_canary_title">Leak Canary (bellek sızıntısı dedektörü)</string>
     <string name="number_picker_title">Number Picker (özelleştirilebilir sayı seçici)</string>
+    <string name="exoplayer_title">ExoPlayer (video player)</string>
 </resources>
