--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -547,4 +547,5 @@
     <string name="gson_title">Gson (JSON parser)</string>
     <string name="leak_canary_title">Leak Canary (memory leak detector)</string>
     <string name="number_picker_title">Selector de números (selector de números personalitzable)</string>
+    <string name="exoplayer_title">ExoPlayer (video player)</string>
 </resources>
