--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -545,4 +545,5 @@
     <string name="gson_title">Gson (parser JSON)</string>
     <string name="leak_canary_title">Leak Canary (rileva leak di memoria)</string>
     <string name="number_picker_title">Number Picker (Selettore di numeri personalizzabile)</string>
+    <string name="exoplayer_title">ExoPlayer (video player)</string>
 </resources>
