--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -559,4 +559,5 @@
     <string name="gson_title">Gson (JSON analizatoriui)</string>
     <string name="leak_canary_title">Leak Canary (atminties nutekėjimo ieškikliui)</string>
     <string name="number_picker_title">Number Picker (tinkinamam numerių parinkikliui)</string>
+    <string name="exoplayer_title">ExoPlayer (video player)</string>
 </resources>
