--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -545,4 +545,5 @@
     <string name="gson_title">Gson (processador JSON)</string>
     <string name="leak_canary_title">Leak Canary (detetor de falhas de memória)</string>
     <string name="number_picker_title">Number Picker (seletor de números personalizado)</string>
+    <string name="exoplayer_title">ExoPlayer (video player)</string>
 </resources>
