--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -575,4 +575,5 @@
     <string name="gson_title">Gson (анализатор JSON)</string>
     <string name="leak_canary_title">Leak Canary (детектор утечек памяти)</string>
     <string name="number_picker_title">Number Picker (настраиваемый ввод чисел)</string>
+    <string name="exoplayer_title">ExoPlayer (video player)</string>
 </resources>
