--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -566,4 +566,5 @@
     <string name="gson_title">Gson (parsovač JSON)</string>
     <string name="leak_canary_title">Leak Canary (detektor únikov pamäte)</string>
     <string name="number_picker_title">Number Picker (upraviteľný vyberač čísel)</string>
+    <string name="exoplayer_title">ExoPlayer (prehrávač videí)</string>
 </resources>
