--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -545,4 +545,5 @@
     <string name="gson_title">Gson (JSON-parser)</string>
     <string name="leak_canary_title">Leak Canary (minnesläckagedetektor)</string>
     <string name="number_picker_title">Number Picker (anpassningsbar talväljare)</string>
+    <string name="exoplayer_title">ExoPlayer (video player)</string>
 </resources>
