--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -546,4 +546,6 @@
     <string name="leak_canary_title">Leak Canary (rileva leak di memoria)</string>
     <string name="number_picker_title">Number Picker (Selettore di numeri personalizzabile)</string>
     <string name="exoplayer_title">ExoPlayer (video player)</string>
+    <string name="panorama_view_title">VR Panorama View (displaying panoramas)</string>
+    <string name="sanselan_title">Apache Sanselan (reading image metadata)</string>
 </resources>
