--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -567,4 +567,6 @@
     <string name="leak_canary_title">Leak Canary (detektor únikov pamäte)</string>
     <string name="number_picker_title">Number Picker (upraviteľný vyberač čísel)</string>
     <string name="exoplayer_title">ExoPlayer (prehrávač videí)</string>
+    <string name="panorama_view_title">VR Panorama View (zobrazovanie panorám)</string>
+    <string name="sanselan_title">Apache Sanselan (čítanie metadát obrázkov)</string>
 </resources>
