--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -545,4 +545,6 @@
     <string name="leak_canary_title">Leak Canary (Memory-Leak-Detektor)</string>
     <string name="number_picker_title">Number Picker (Konfigurierbarer Zahlenwähler)</string>
     <string name="exoplayer_title">ExoPlayer (video player)</string>
+    <string name="panorama_view_title">VR Panorama View (displaying panoramas)</string>
+    <string name="sanselan_title">Apache Sanselan (reading image metadata)</string>
 </resources>
