--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -544,4 +544,6 @@
     <string name="leak_canary_title">Leak Canary (détecteur de fuite de mémoire)</string>
     <string name="number_picker_title">Number Picker (customizable number picker)</string>
     <string name="exoplayer_title">ExoPlayer (video player)</string>
+    <string name="panorama_view_title">VR Panorama View (displaying panoramas)</string>
+    <string name="sanselan_title">Apache Sanselan (reading image metadata)</string>
 </resources>
