--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -560,4 +560,6 @@
     <string name="leak_canary_title">Leak Canary (atminties nutekėjimo ieškikliui)</string>
     <string name="number_picker_title">Number Picker (tinkinamam numerių parinkikliui)</string>
     <string name="exoplayer_title">ExoPlayer (video player)</string>
+    <string name="panorama_view_title">VR Panorama View (displaying panoramas)</string>
+    <string name="sanselan_title">Apache Sanselan (reading image metadata)</string>
 </resources>
