--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -546,4 +546,6 @@
     <string name="leak_canary_title">Leak Canary (detetor de falhas de memória)</string>
     <string name="number_picker_title">Number Picker (seletor de números personalizado)</string>
     <string name="exoplayer_title">ExoPlayer (video player)</string>
+    <string name="panorama_view_title">VR Panorama View (displaying panoramas)</string>
+    <string name="sanselan_title">Apache Sanselan (reading image metadata)</string>
 </resources>
