--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -576,4 +576,6 @@
     <string name="leak_canary_title">Leak Canary (детектор утечек памяти)</string>
     <string name="number_picker_title">Number Picker (настраиваемый ввод чисел)</string>
     <string name="exoplayer_title">ExoPlayer (video player)</string>
+    <string name="panorama_view_title">VR Panorama View (displaying panoramas)</string>
+    <string name="sanselan_title">Apache Sanselan (reading image metadata)</string>
 </resources>
