--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -122,9 +122,9 @@
     </plurals>
 
     <plurals name="deleting_items">
-        <item quantity="one">Deleting %d item</item>
-        <item quantity="few">Deleting %d items</item>
-        <item quantity="other">Deleting %d items</item>
+        <item quantity="one">Удаление %d объекта</item>
+        <item quantity="few">Удаление %d объектов</item>
+        <item quantity="other">Удаление %d объектов</item>
     </plurals>
 
     <!-- Storages -->
@@ -203,7 +203,7 @@
     <string name="temporarily_show_hidden">Временный показ скрытых</string>
     <string name="stop_showing_hidden">Не показывать скрытые медиа</string>
     <string name="maximum_share_reached">Слишком большой объём данных, чтобы делиться им</string>
-    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
+    <string name="empty_and_disable_recycle_bin">Очистить и отключить корзину</string>
 
     <!-- Sorting -->
     <string name="sort_by">Сортировать по…</string>
@@ -222,8 +222,8 @@
     <string name="proceed_with_deletion">Подтверждение удаления</string>
     <string name="deletion_confirmation">Вы действительно хотите удалить %s?</string>    <!-- Are you sure you want to delete 5 items? -->
     <string name="move_to_recycle_bin_confirmation">Вы действительно хотите переместить %s в корзину?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
-    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
-    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
+    <string name="are_you_sure_delete">Вы действительно хотите удалить этот объект?</string>
+    <string name="are_you_sure_recycle_bin">Вы действительно хотите переместить этот объект в корзину?</string>
     <string name="do_not_ask_again">Не спрашивать снова (до следующего запуска)</string>
     <string name="yes">Да</string>
     <string name="no">Нет</string>
@@ -256,8 +256,8 @@
     <string name="fingerprint_setup_successfully">Установка защиты выполнена успешно. Переустановите приложение в случае возникновения проблем с её отключением.</string>
 
     <!-- Times -->
-    <string name="yesterday">Yesterday</string>
-    <string name="today">Today</string>
+    <string name="yesterday">Вчера</string>
+    <string name="today">Сегодня</string>
     <string name="tomorrow">Завтра</string>
     <string name="seconds_raw">секунд</string>
     <string name="minutes_raw">минут</string>
@@ -421,13 +421,13 @@
     <string name="text">Текст</string>
 
     <!-- Recycle Bin -->
-    <string name="restore_this_file">Restore this file</string>
-    <string name="restore_selected_files">Restore selected files</string>
-    <string name="restore_all_files">Restore all files</string>
-    <string name="recycle_bin_emptied">The Recycle Bin has been emptied successfully</string>
-    <string name="files_restored_successfully">Files have been restored successfully</string>
-    <string name="empty_recycle_bin_confirmation">Are you sure you want to empty the Recycle Bin? The files will be permanently lost.</string>
-    <string name="recycle_bin_empty">The Recycle Bin is empty</string>
+    <string name="restore_this_file">Восстановить этот файл</string>
+    <string name="restore_selected_files">Восстановить выбранные файлы</string>
+    <string name="restore_all_files">Восстановить все файлы</string>
+    <string name="recycle_bin_emptied">Корзина успешно очищена</string>
+    <string name="files_restored_successfully">Файлы успешно восстановлены</string>
+    <string name="empty_recycle_bin_confirmation">Вы действительно хотите очистить корзину? Файлы будут удалены безвозвратно.</string>
+    <string name="recycle_bin_empty">Корзина пуста</string>
 
     <!-- Import / Export -->
     <string name="importing">Импорт…</string>
@@ -575,7 +575,7 @@
     <string name="gson_title">Gson (анализатор JSON)</string>
     <string name="leak_canary_title">Leak Canary (детектор утечек памяти)</string>
     <string name="number_picker_title">Number Picker (настраиваемый ввод чисел)</string>
-    <string name="exoplayer_title">ExoPlayer (video player)</string>
-    <string name="panorama_view_title">VR Panorama View (displaying panoramas)</string>
-    <string name="sanselan_title">Apache Sanselan (reading image metadata)</string>
+    <string name="exoplayer_title">ExoPlayer (видеопроигрыватель)</string>
+    <string name="panorama_view_title">VR Panorama View (отображение панорам)</string>
+    <string name="sanselan_title">Apache Sanselan (чтение метаданных изображений)</string>
 </resources>
