--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -18,10 +18,10 @@
     <string name="deleting_folder">S\'està eliminant la carpeta \'%s\'</string>
 
     <!-- Favorites -->
-    <string name="favorites">Favorites</string>
-    <string name="add_favorites">Add favorites</string>
-    <string name="add_to_favorites">Add to favorites</string>
-    <string name="remove_from_favorites">Remove from favorites</string>
+    <string name="favorites">Preferits</string>
+    <string name="add_favorites">Afegeix als preferits</string>
+    <string name="add_to_favorites">Afegeix als preferits/string>
+    <string name="remove_from_favorites">Elimina dels preferits</string>
 
     <!-- Search -->
     <string name="search">Buscar</string>
