--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -19,7 +19,7 @@
 
     <!-- Favorites -->
     <string name="favorites">Favoritos</string>
-    <string name="add_favorites">Add favorites</string>
+    <string name="add_favorites">Agregar a favoritos</string>
     <string name="add_to_favorites">Agregar a favoritos</string>
     <string name="remove_from_favorites">Eliminar de favoritos</string>
 
