--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -199,7 +199,7 @@
     <string name="temporarily_show_hidden">Mostrar amagats temporalment</string>
     <string name="stop_showing_hidden">Deixar de mostrar mitjans amagats</string>
     <string name="maximum_share_reached">No pots compartir aquest contingut alhora</string>
-    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
+    <string name="empty_and_disable_recycle_bin">Buida i desactiva la paperera de reciclatge</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar per</string>
