--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -199,7 +199,7 @@
     <string name="temporarily_show_hidden">Mostrar ocultos temporalmente</string>
     <string name="stop_showing_hidden">No mostrar ocultos</string>
     <string name="maximum_share_reached">No puedes compartir todo este contenido a la vez</string>
-    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
+    <string name="empty_and_disable_recycle_bin">Vaciar y desactivar la papelera de reciclaje</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
