--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -391,13 +391,13 @@
     <string name="text">Texto</string>
 
     <!-- Recycle Bin -->
-    <string name="restore_this_file">Restore this file</string>
-    <string name="restore_selected_files">Restore selected files</string>
-    <string name="restore_all_files">Restore all files</string>
-    <string name="recycle_bin_emptied">The Recycle Bin has been emptied successfully</string>
-    <string name="files_restored_successfully">Files have been restored successfully</string>
-    <string name="empty_recycle_bin_confirmation">Are you sure you want to empty the Recycle Bin? The files will be permanently lost.</string>
-    <string name="recycle_bin_empty">The Recycle Bin is empty</string>
+    <string name="restore_this_file">Restaurar el fichero</string>
+    <string name="restore_selected_files">Restaurar los ficheros seleccionados</string>
+    <string name="restore_all_files">Restaurar todos los ficheros</string>
+    <string name="recycle_bin_emptied">La papelera se ha vaciado</string>
+    <string name="files_restored_successfully">Lo ficheros han sido restaurados correctamente</string>
+    <string name="empty_recycle_bin_confirmation">Seguro que quieres vaciar la papelera? Los ficheros se perderan definitivamente.</string>
+    <string name="recycle_bin_empty">La papelera está vacia</string>
 
     <!-- Import / Export -->
     <string name="importing">Importando…</string>
