--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -250,8 +250,8 @@
     <string name="fingerprint_setup_successfully">Configuración de protección con éxito. Por favor, vuelva a instalar la aplicación en caso de problemas al restablecerla.</string>
 
     <!-- Times -->
-    <string name="yesterday">Yesterday</string>
-    <string name="today">Today</string>
+    <string name="yesterday">Ayer</string>
+    <string name="today">Hoy</string>
     <string name="tomorrow">Mañana</string>
     <string name="seconds_raw">segundos</string>
     <string name="minutes_raw">minutos</string>
