--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -397,8 +397,7 @@
     <string name="restore_all_files">Ripristina tutti i file</string>
     <string name="recycle_bin_emptied">Il cestino è stato svuotato correttamente</string>
     <string name="files_restored_successfully">I file sono stati ripristinati correttamente</string>
-    <string name="empty_recycle_bin_confirmation">Sei sicuro di volere svuotare il cestino? I file verranno 
-persi definitivamente.</string>
+    <string name="empty_recycle_bin_confirmation">Sei sicuro di volere svuotare il cestino? I file verranno persi definitivamente.</string>
     <string name="recycle_bin_empty">Il cestino è vuoto</string>
 
     <!-- Import / Export -->
