adding a new string Purchase Thank You

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -370,6 +370,7 @@
 
     <!-- Settings -->
     <string name="settings">Nastavení</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">Přizpůsobit barvy</string>
     <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Use English language</string>
