--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -352,6 +352,7 @@
 
     <!-- Settings -->
     <string name="settings">Ajustes</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">Cambiar colores</string>
     <string name="customize_widget_colors">Personaliza los colores del widget</string>
     <string name="use_english_language">Usar el idioma Inglés</string>
