--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -373,6 +373,7 @@
 
     <!-- Settings -->
     <string name="settings">Postavke</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">Prilagodi boje</string>
     <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Koristi Engleski jezik</string>
