--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -353,6 +353,7 @@
 
     <!-- Settings -->
     <string name="settings">Impostazioni</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">Personalizza i colori</string>
     <string name="customize_widget_colors">Personalizza i colori del widget</string>
     <string name="use_english_language">Forza la lingua inglese</string>
