--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -383,6 +383,7 @@
 
     <!-- Settings -->
     <string name="settings">Настройки</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">Настроить цвета</string>
     <string name="customize_widget_colors">Настроить цвета виджета</string>
     <string name="use_english_language">Use English language</string>
