--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -374,6 +374,7 @@
 
     <!-- Settings -->
     <string name="settings">Nastavenia</string>
+    <string name="purchase_simple_thank_you">Kúpiť Jednoduché Ďakujem</string>
     <string name="customize_colors">Upraviť farby</string>
     <string name="customize_widget_colors">Upraviť farby widgetov</string>
     <string name="use_english_language">Použiť angličtinu</string>
