--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -353,6 +353,7 @@
 
     <!-- Settings -->
     <string name="settings">Indstillinger</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">Rediger farver</string>
     <string name="customize_widget_colors">Rediger widget-farver</string>
     <string name="use_english_language">Use English language</string>
