--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -353,6 +353,7 @@
 
     <!-- Settings -->
     <string name="settings">Einstellungen</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">Farben anpassen</string>
     <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">App in Englisch verwenden</string>
