--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -353,6 +353,7 @@
 
     <!-- Settings -->
     <string name="settings">Asetukset</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">Muokkaa sovelluksen värejä</string>
     <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Käytä Englannin kieltä</string>
