--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -353,6 +353,7 @@
 
     <!-- Settings -->
     <string name="settings">Paramètres</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">Personnaliser les couleurs</string>
     <string name="customize_widget_colors">Personnaliser les couleurs du widget</string>
     <string name="use_english_language">Utiliser l\'affichage en anglais</string>
