--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -353,6 +353,7 @@
 
     <!-- Settings -->
     <string name="settings">Pengaturan</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">Sesuaikan Warna</string>
     <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Gunakan Bahasa Inggris</string>
