--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -353,6 +353,7 @@
 
     <!-- Settings -->
     <string name="settings">설정</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">앱 테마 및 색상 설정</string>
     <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">영어 사용</string>
