--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -370,6 +370,7 @@
 
     <!-- Settings -->
     <string name="settings">Nustatymai</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">Spalvų redagavimas</string>
     <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Naudoti anglų kalbą</string>
