--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -371,6 +371,7 @@
 
     <!-- Settings -->
     <string name="settings">Ustawienia</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">Dostosuj kolory aplikacji</string>
     <string name="customize_widget_colors">Dostosuj kolory widżetu</string>
     <string name="use_english_language">Wymuś używanie przez aplikację języka angielskiego</string>
