--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -353,6 +353,7 @@
 
     <!-- Settings -->
     <string name="settings">Configurações</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">Personalizar cores</string>
     <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Usar o idioma inglês</string>
