--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -353,6 +353,7 @@
 
     <!-- Settings -->
     <string name="settings">Inställningar</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">Anpassa färger</string>
     <string name="customize_widget_colors">Anpassa widgetens färger</string>
     <string name="use_english_language">Använd engelska</string>
