--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -353,6 +353,7 @@
 
     <!-- Settings -->
     <string name="settings">设置</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">自定义颜色</string>
     <string name="customize_widget_colors">自定义小部件颜色</string>
     <string name="use_english_language">强制使用英语语言</string>
