--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -352,6 +352,7 @@
 
     <!-- Settings -->
     <string name="settings">設定</string>
+    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">自訂顏色</string>
     <string name="customize_widget_colors">自訂小工具顏色</string>
     <string name="use_english_language">強制使用英語</string>
