--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -355,7 +355,7 @@
 
     <!-- Settings -->
     <string name="settings">Ajustaments</string>
-    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
+    <string name="purchase_simple_thank_you">Compra Simple Thank You</string>
     <string name="customize_colors">Canviar colors</string>
     <string name="customize_widget_colors">Personalitza els colors de widgets</string>
     <string name="use_english_language">Usar l’idioma Anglès</string>
