--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -134,6 +134,8 @@
     <string name="root">Корневая папка</string>
     <string name="wrong_root_selected">Папка выбрана неверно, пожалуйста, выберите SD-карту</string>
     <string name="sd_card_otg_same">Пути к SD-карте и OTG-устройству не могут быть одинаковыми</string>
+    <string name="app_on_sd_card">You seem to have the app installed on an SD card, that makes the app widgets unavailable. You won\'t even see them on the list of available widgets.
+        It is a system limitation, so if you want to use the widgets, you have to move the app back on the internal storage.</string>
 
     <!-- File properties -->
     <string name="properties">Свойства</string>
